--- a/CrossCorr.html
+++ b/CrossCorr.html
@@ -118,59 +118,60 @@ layout: default
             </a>
         </div>
     </aside>
-    <div class="flex-container">
-        <main>
-            <h2 style="text-align: center;"> Cross Correlation</h2><br>
-            <p>In signal processing, cross-correlation is a measure of similarity of two series as a function of the displacement of one relative to the other. This is also known as a sliding dot product or sliding inner-product. It is commonly used for searching a long signal for a shorter, known feature. It has applications in pattern recognition, single particle analysis, electron tomography, averaging, cryptanalysis, and neurophysiology. The cross-correlation is similar in nature to the convolution of two functions.</p>
-            <h4><strong>Explanation:</strong></h4>
-            <p>Consider two finite length sequences, say x(n) and y(n). The cross correlation of x(n) and y(n) can be obtained by simply performing convolution between x(n) and y(-n) i.e</p>
-            <h4 style="text-align: center; overflow-y: hidden;">R<sub>xy</sub>(n) = x(n)*y(-n)</h4><br><br>
-            <p>The step-by-step values for the provided input is shown below :</p>
-            <h4 class="plot-title" id="exp-part-1">x(n) and y(n) :</h4>
-            <table id="exp">
-            </table><hr>
-            <h4 class="plot-title" id="exp-part-2">Add the below sequences :</h4>
-            <table id="exp1">
-            </table><hr>
-            <h4 class="plot-title" id="exp-part-3" style="overflow-y: hidden;">R<sub>xy</sub>(n) :</h4>
-            <table id="exp2">
-            </table><br><br>
-        </main>
-        <div class="right">
-            <div class="top">
-                <button id="menu-btn">
-                    <span class="material-symbols-sharp">menu</span>
-                </button>
-                <div class="theme-toggler">
-                    <span class="material-symbols-sharp active">light_mode</span>
-                    <span class="material-symbols-sharp">dark_mode</span>
+    <div class="heyMain">
+        <div class="flex-container">
+            <main>
+                <h2 style="text-align: center;"> Cross Correlation</h2><br>
+                <p>In signal processing, cross-correlation is a measure of similarity of two series as a function of the displacement of one relative to the other. This is also known as a sliding dot product or sliding inner-product. It is commonly used for searching a long signal for a shorter, known feature. It has applications in pattern recognition, single particle analysis, electron tomography, averaging, cryptanalysis, and neurophysiology. The cross-correlation is similar in nature to the convolution of two functions.</p>
+                <h4><strong>Explanation:</strong></h4>
+                <p>Consider two finite length sequences, say x(n) and y(n). The cross correlation of x(n) and y(n) can be obtained by simply performing convolution between x(n) and y(-n) i.e</p>
+                <h4 style="text-align: center; overflow-y: hidden;">R<sub>xy</sub>(n) = x(n)*y(-n)</h4><br><br>
+                <p>
+                    The step-by-step values for the provided input is shown at the bottom of the page:
+                </p>
+            </main>
+            <div class="right">
+                <div class="top">
+                    <button id="menu-btn">
+                        <span class="material-symbols-sharp">menu</span>
+                    </button>
+                    <div class="theme-toggler">
+                        <span class="material-symbols-sharp active">light_mode</span>
+                        <span class="material-symbols-sharp">dark_mode</span>
+                    </div>
+                </div>
+                <div class="interface-section">
+                    <br>
+                    <h3>Enter the first sequence :</h3>
+                    <input id="sequence1" placeholder="1,2,3,4..."/>
+                    <br><br>
+                    <h3>Enter the second sequence :</h3>
+                    <input id="sequence2" placeholder="1,2,3,4..."/>
+                    <br><br>
+                    <button type="submit" class="btn btn-warning" onclick="crossCorr()">Submit</button>
+                    <br><br>
+                    <h5 id="crossCorrResponse"></h5>
+                    <br><br>
+                    <h4 class="plot-title" id="input-title">x(n) :</h4><br>
+                    <!-- Input sequence plot is displayed -->
+                    <canvas class="outputSequence" id="inputResp"></canvas>
+                    <br><br>
+                    <h4 class="plot-title" id="impulse-title">y(n) :</h4><br>
+                    <!-- Impulse sequence plot is displayed -->
+                    <canvas class="outputSequence" id="impulseResp"></canvas>
+                    <br><br>
+                    <h4 class="plot-title" id="output-title" style="overflow-y: hidden;">R<sub>xy</sub>(n) :</h4><br>
+                    <!-- Output sequence plot is displayed -->
+                    <canvas class="outputSequence" id="outputResp" style="margin-bottom: 100px;"></canvas>
                 </div>
             </div>
-            <div class="interface-section">
-                <br>
-                <h3>Enter the first sequence :</h3>
-                <input id="sequence1" placeholder="1,2,3,4..."/>
-                <br><br>
-                <h3>Enter the second sequence :</h3>
-                <input id="sequence2" placeholder="1,2,3,4..."/>
-                <br><br>
-                <button type="submit" class="btn btn-warning" onclick="crossCorr()">Submit</button>
-                <br><br>
-                <h4 id="crossCorrResponse"></h4>
-                <br><br>
-                <h4 class="plot-title" id="input-title">x(n) :</h4><br>
-                <!-- Input sequence plot is displayed -->
-                <canvas class="outputSequence" id="inputResp"></canvas>
-                <br><br>
-                <h4 class="plot-title" id="impulse-title">y(n) :</h4><br>
-                <!-- Impulse sequence plot is displayed -->
-                <canvas class="outputSequence" id="impulseResp"></canvas>
-                <br><br>
-                <h4 class="plot-title" id="output-title">R<sub>xy</sub>(n) :</h4><br>
-                <!-- Output sequence plot is displayed -->
-                <canvas class="outputSequence" id="outputResp"></canvas><br><br>
-            </div>
         </div>
+        <h4 class="plot-title" id="exp-part-1">x(n) and y(n) :</h4>
+        <table id="exp"></table><br>
+        <h4 class="plot-title" id="exp-part-2">Add the below sequences :</h4>
+        <table id="exp1"></table><br>
+        <h4 class="plot-title" id="exp-part-3" style="overflow-y: hidden;">R<sub>xy</sub>(n) :</h4>
+        <table id="exp2"></table><br><br>
     </div>
 </div>
 
