--- a/IDFT.html
+++ b/IDFT.html
@@ -118,42 +118,44 @@ layout: default
             </a>
         </div>
     </aside>
-    <div class="flex-container">
-        <main>
-            <h2 style="text-align: center;"> Inverse Discrete Fourier Transform</h2><br>
-            <p> An inverse DFT is a Fourier series, using the DTFT samples as coefficients of complex sinusoids at the corresponding DTFT frequencies. It has the same sample-values as the original input sequence.</p>
-            <p>The discrete Fourier transform is an invertible, linear transformation</p>
-            <p><b>F</b>:C<sup>N</sup> --> C<sup>N</sup></p>
-            <p>with <b>C</b> denoting the set of complex numbers. Its inverse is known as Inverse Discrete Fourier Transform (IDFT). In other words, for any <b>N</b>>0, an N-dimensional complex vector has a DFT and an IDFT which are in turn N-dimensional complex vectors.</p>
-            <p>The inverse transform is given by:</p>
-            <img src="assets/IDFT_formula.svg" alt="IDFT formula" class="mx-auto d-block" style="width: 50%; height: 25%; background: white;"><br><br>
-            <p>The step-by-step values for the provided input is shown below :</p>
-            <table id="exp">
-            </table>
-            <br><br>
-        </main>
-        <div class="right">
-            <div class="top">
-                <button id="menu-btn">
-                    <span class="material-symbols-sharp">menu</span>
-                </button>
-                <div class="theme-toggler">
-                    <span class="material-symbols-sharp active">light_mode</span>
-                    <span class="material-symbols-sharp">dark_mode</span>
+    <div class="heyMain">
+        <div class="flex-container">
+            <main style="overflow-y: hidden;">
+                <h2 style="text-align: center;"> Inverse Discrete Fourier Transform</h2><br>
+                <p> An inverse DFT is a Fourier series, using the DTFT samples as coefficients of complex sinusoids at the corresponding DTFT frequencies. It has the same sample-values as the original input sequence.</p>
+                <p>The discrete Fourier transform is an invertible, linear transformation</p>
+                <p><b>F</b>:C<sup>N</sup> --> C<sup>N</sup></p>
+                <p>with <b>C</b> denoting the set of complex numbers. Its inverse is known as Inverse Discrete Fourier Transform (IDFT). In other words, for any <b>N</b>>0, an N-dimensional complex vector has a DFT and an IDFT which are in turn N-dimensional complex vectors.</p>
+                <p>The inverse transform is given by:</p>
+                <img src="assets/IDFT_formula.svg" alt="IDFT formula" class="mx-auto d-block" style="width: 50%; height: 25%; background: white;"><br><br>
+                <p>
+                    The step-by-step values for the provided input is shown at the bottom of the page:
+                </p>
+            </main>
+            <div class="right">
+                <div class="top">
+                    <button id="menu-btn">
+                        <span class="material-symbols-sharp">menu</span>
+                    </button>
+                    <div class="theme-toggler">
+                        <span class="material-symbols-sharp active">light_mode</span>
+                        <span class="material-symbols-sharp">dark_mode</span>
+                    </div>
+                </div>
+                <div class="interface-section">
+                    <br>
+                    <h3>Enter the DFT sequence :</h3>
+                    <input id="dftInput" placeholder="1,2+2i,-5+3i,-6-8i..." onchange="idft()"/>
+                    <br><br>
+                    <h4 id="idftResponse"></h4>
+                    <br><br>
+                    <h4 class="plot-title" id="graphTitle">Plot of IDFT sequence :</h4><br>
+                    <!-- Output sequence plot is displayed -->
+                    <canvas class="outputSequence" id="IDFT-Resp" style="margin-bottom: 100px;"></canvas>
                 </div>
             </div>
-            <div class="interface-section">
-                <br>
-                <h3>Enter the DFT sequence :</h3>
-                <input id="dftInput" placeholder="1,2+2i,-5+3i,-6-8i..." onchange="idft()"/>
-                <br><br>
-                <h4 id="idftResponse"></h4>
-                <br><br>
-                <h4 class="plot-title" id="graphTitle">Plot of IDFT sequence :</h4><br>
-                <!-- Output sequence plot is displayed -->
-                <canvas class="outputSequence" id="IDFT-Resp"></canvas><br><br>
-            </div>
         </div>
+        <table id="exp"></table><br><br>
     </div>
 </div>
 
